[gd_scene load_steps=5 format=3 uid="uid://gmlb2t80keft"]

[ext_resource type="Script" path="res://Games/MashMeter.gd" id="1_ttltv"]
[ext_resource type="Texture2D" uid="uid://by76t7gi1ihj7" path="res://Assets/Art/Aesprite/MiniGameAssets/MashMeterBack.png" id="2_boinv"]
[ext_resource type="Texture2D" uid="uid://p6npijrg8ff1" path="res://Assets/Art/Aesprite/MiniGameAssets/MeterIndicator.png" id="3_wrhpj"]
[ext_resource type="Texture2D" uid="uid://bxmgkjt7hrwo4" path="res://Assets/Art/Aesprite/MiniGameAssets/StretchBox.png" id="4_i6j57"]

[node name="MashMeter" type="Node2D"]
script = ExtResource("1_ttltv")

[node name="MashMeterBack" type="Sprite2D" parent="."]
scale = Vector2(3, 3)
texture = ExtResource("2_boinv")

[node name="MeterIndicator" type="Sprite2D" parent="."]
position = Vector2(0, 28.5)
scale = Vector2(3, 3)
texture = ExtResource("3_wrhpj")

[node name="Max" type="Marker2D" parent="."]
position = Vector2(0, -28.5)

[node name="Min" type="Marker2D" parent="."]
position = Vector2(0, 28.5)

[node name="Goal" type="Marker2D" parent="."]
position = Vector2(0, -16)

[node name="GoalIndicator" type="Node2D" parent="."]

[node name="LeftIndicator" type="Sprite2D" parent="GoalIndicator"]
position = Vector2(-13, -33)
scale = Vector2(3, 3)
texture = ExtResource("4_i6j57")
offset = Vector2(0, 0.5)

[node name="RightIndicator" type="Sprite2D" parent="GoalIndicator"]
position = Vector2(13, -33)
scale = Vector2(3, 3)
texture = ExtResource("4_i6j57")
offset = Vector2(0, 0.5)
